--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,18 @@
 theme: jekyll-theme-cayman
+
+# Site settings
+title: Digital Content Hub IT site
+description: 'Digital Content Hub IT description'
+baseurl: '' # the subpath of your site, e.g. /blog
+url: '' # the base hostname & protocol for your site http://www.example.com
+# google_analytics: 'UA-XXXXXX-X'
+#twitter_username: 'twitter_username'
+
+# Build settings
+markdown: kramdown
+
+permalink: '/:title/'
+
+gems: [jekyll-paginate]
+
+paginate: 10
