--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,7 @@
 theme: jekyll-theme-cayman
+
+title: Polo de Contenidos Digitales.
+description: > # this means to ignore newlines until "baseurl:"
+  Sitio de la Oficina Técnica del Polo de Contenidos Digitales.
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "https://polodigital.github.io" # the base hostname & protocol for your site, e.g. http://example.com
