--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,6 @@
 theme: jekyll-theme-cayman
 
-title: Polo de Contenidos Digitales 
-Oficina Técnica
+title: Polo de Contenidos Digitales - Oficina Técnica
 description: > # this means to ignore newlines until "baseurl:"
   Sitio de la Oficina Técnica del Polo de Contenidos Digitales.
 baseurl: "" # the subpath of your site, e.g. /blog
