--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,6 @@ theme: jekyll-theme-cayman
 
 title: Polo de Contenidos Digitales - Oficina Técnica
 description: > # this means to ignore newlines until "baseurl:"
-  Sitio de la Oficina Técnica del Polo de Contenidos Digitales.
+  La Oficina Técnica desarrolla su actividad gestionando las infraestructuras, tecnologías y espacios que conforman el Polo de Contenidos Digitales.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://polodigital.github.io" # the base hostname & protocol for your site, e.g. http://example.com
