--- a/_config.yml
+++ b/_config.yml
@@ -5,3 +5,13 @@ description: > # this means to ignore newlines until "baseurl:"
   La Oficina Técnica desarrolla su actividad gestionando las infraestructuras, tecnologías y espacios que conforman el Polo de Contenidos Digitales.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://polodigital.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+
+# Site menu settings
+menu:
+  - title: "Blog"
+    url: "/blog"
+  - title: "Documentación"
+    url: "/documentation"
+  - title: "Soporte"
+    url: "/support"
+# End
